[gd_scene load_steps=5 format=2]

[ext_resource path="res://cards/Card.gd" type="Script" id=1]
[ext_resource path="res://cards/texture/1C.png" type="Texture" id=2]
[ext_resource path="res://cards/tres/CardRosource.gd" type="Script" id=3]

[sub_resource type="Resource" id=1]
script = ExtResource( 3 )
card_name = "11S"

[node name="Card" type="Control"]
margin_right = 64.0
margin_bottom = 89.0
rect_min_size = Vector2( 64, 89 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
card_resource = SubResource( 1 )

[node name="t_card" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 89.0
rect_min_size = Vector2( 64, 89 )
rect_pivot_offset = Vector2( 32, 89 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="timer_preview" type="Timer" parent="."]
wait_time = 0.3

[node name="timer_release" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="timeout" from="timer_preview" to="." method="_on_timer_preview_timeout"]
[connection signal="timeout" from="timer_release" to="." method="_on_timer_release_timeout"]
